--- a/style.css
+++ b/style.css
@@ -49,3 +49,12 @@ em strong
 
 #Need
 { width: 20%}
+
+footer {
+text-align:center;
+background: url("https://img.freepik.com/fotos-gratis/fundo-preto-antigo-textura-do-grunge-papel-de-parede-escuro-quadro-negro-quadro-negro-parede-da-sala_1258-28312.jpg?w=360 ");
+padding: 40px 0;
+}
+
+.cop{color:#ffffff
+}
